--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '20 16 * * *'  # Täglich um 02:00 UTC (anpassen falls nötig)
+    - cron: '20 16 * * *' # Täglich um 02:00 UTC (anpassen falls nötig)
+  workflow_dispatch:
 
 jobs:
   build:
