--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: Supabase PDF Workflow
+name: Generate and Send Reports Workflow
 
 on:
   schedule:
-    - cron: '22 4 28 * *' # Täglich um 02:00 UTC (anpassen falls nötig)
+    - cron: '22 4 28 * *'  # Anpassen: Läuft am 28. jeden Monats um 04:22 UTC (oder täglich, falls gewünscht)
   workflow_dispatch:
 
 jobs:
@@ -21,7 +21,7 @@ jobs:
       - name: Abhängigkeiten installieren
         run: npm install
 
-      - name: Workflow ausführen
+      - name: Run Generate and Send Reports Script
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
@@ -29,4 +29,4 @@ jobs:
           BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
           EMAIL_FROM: ${{ secrets.EMAIL_FROM }}
           EMAIL_TO: ${{ secrets.EMAIL_TO }}
-        run: node src/index.js
+        run: node src/generate_and_send_reports.js
